--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.1.1
+  provider: ^6.1.5+1
   intl: ^0.20.2
   google_fonts: ^8.0.0
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^1.0.0
+  flutter_svg: ^2.2.3
     
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  url_launcher: ^6.3.2
+  http: ^1.6.0
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +55,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
-  provider: ^6.1.5+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
